[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool]
[tool.black]
line-length = 88

[tool.cruft]
skip = [
    "tests/",
    "src/",
    "*/header.png",
    ".pypirc",
    "CHANGELOG.md",
    "setup.cfg"
]

[tool.isort]
import_heading_stdlib = "Core Library modules"
import_heading_thirdparty = "Third party modules"
import_heading_firstparty = "First party modules"
import_heading_localfolder = "Local modules"
include_trailing_comma = true
indent = '    '
known_third_party = [
    "click",
    "pytest",
    "setuptools",
    "pip-tools",
    "pre-commit"
]
known_first_party = [
    "pathmagic"
]
line_length = 80
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
balanced_wrapping = true
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
follow_imports = "skip"
html_report = "mypy-report"
mypy_path = "typeshed/pyi:typeshed/imports"

[tool.semantic_release]
version_variable = [
    "src/pynamer/__init__.py:__version__",
    "docs/conf.py:version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
dist_path = "dist/"
upload_to_pypi = true
upload_to_repository = true
remove_dist = true
version_source = "tag"
commit_message = "chore: generate by PSR"

[tool.flakeheaven]
# base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
exclude = ["example.py"]
format = "grouped"
max_line_length = 80
show_source = true

[tool.flakeheaven.plugins]
pyflakes = ["+*", "-F401"]
"flake8-*" = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
skip_empty = true
