[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pynamer"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stephen R A King", email = "sking.github@gmail.com" }
]
maintainers = [
    { name = "Stephen R A King", email = "sking.github@gmail.com" }
]
description = "Utility to find an available package name in the PyPI repository and register it"
readme = "README.md"
keywords = [
    "available-on-pypi",
    "pip-search",
    "packaging",
    "naming",
    "name-generation",
    "names",
    "pypi",
    "naming-conventions",
]
requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "build>=1.5.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "packaging>=26.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=14.3.4",
    "tqdm>=4.67.3",
    "twine>=6.2.0",
    "wheel>=0.46.3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Stephen-RA-King/pynamer"
Documentation = "https://pynamer.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Stephen-RA-King/pynamer/issues"
CI = "https://github.com/Stephen-RA-King/pynamer/actions"
"Release Notes" = "https://github.com/Stephen-RA-King/pynamer/releases"
"Source Code" = "https://github.com/Stephen-RA-King/pynamer/"
Download = "https://github.com/Stephen-RA-King/pynamer/archive/refs/heads/main.zip"

[project.scripts]
pynamer = "pynamer.pynamer:main"

[tool.setuptools.dynamic]
version = { attr = "pynamer.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pynamer = [
    "README.md",
    "project_name",
    "project_name/__init__.py",
    "setup.txt",
    "setup_base.txt",
]

[tool.flake8]
docstring-convention = "numpy"
max-complexity = 18
max-line-length = 88
select = ["B", "B9", "C", "D", "E", "F", "N", "W"]
exclude = ["tests/*", ".tox/*", ".nox/*", "docs/*", ".git/*", ".github/*"]
ignore = ["E203", "W503"]
per-file-ignores = [
    "pynamer.py:C901",
    "builder.py:C901",
]


[tool.black]
line-length = 88
target-version = ["py313"]

[tool.cruft]
skip = [
    "tests/",
    "src/",
    "*/header.png",
    ".pypirc",
    "CHANGELOG.md",
]

[tool.isort]
profile = "black"
line_length = 88
known_third_party = [
    "pytest",
    "setuptools",
    "piptools",
    "pre_commit",
]
known_first_party = [
    "pathmagic"
]
import_heading_stdlib = "Core Library modules"
import_heading_thirdparty = "Third party modules"
import_heading_firstparty = "First party modules"
import_heading_localfolder = "Local modules"
ensure_newline_before_comments = true
combine_as_imports = true


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
follow_imports = "normal"
cache_dir = 'cache/.mypy_cache'
mypy_path = ["typeshed/pyi", "typeshed/imports"]
exclude = [
    '^tests/[\w]*.py$',
    '^tools/[\w]*.py$',
    '^tasks\.py$',
]

[tool.semantic_release]
version_variables = [
    "src/pynamer/__init__.py:__version__",
    "docs/conf.py:version",
]
build_command = "python -m build"
commit_message = "chore: generate release with PSR"

[tool.semantic_release.changelog]
file = "CHANGELOG.md"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
skip_empty = true
