# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=package_data
[metadata]
name = pynamer
version = attr: pynamer.__version__
author = Stephen R A King
author_email = sking.github@gmail.com
maintainer = Stephen R A King
maintainer_email = sking.github@gmail.com
description = Utility to find an available package name on the PyPI repository and register it
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,
platforms = Any
url = https://github.com/Stephen-RA-King/pynamer
download_url = https://github.com/Stephen-RA-King/pynamer/archive/refs/heads/main.zip
license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages = find:
project_urls =
include_package_data = True
python_requires = >=3.9
install_requires =
    jinja2
    bs4
    build
    colorama
    pyyaml
    requests
    rich
    twine
    tqdm
    wheel

[options.packages.find]
where = src

[options.package_data]
pynamer =
    setup.txt
    README.md
    project_name
    project_name/__init__.py
    project_count.pickle
    pypi_index.txt

[options.entry_points]
console_scripts =
    pynamer = pynamer.pynamer:main


[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = numpy
max-complexity = 18
max-line-length = 88
select = B, B9, C, D, E, F, N, W
exclude = tests/*,.tox/*,.nox/*,docs/*,.git/*,.github/*
ignore =
    # pycodestyle - whitespace before ‘,’, ‘;’, or ‘:’ - to be compatible with black
    E203,
    # pycodestyle - line break before binary operator
    W503,
    # imported but unused
    F401,
per-file-ignores =
    # flake8 - module imported but not used
    __init__.py:F401
    pathmagic.py:F401
    test_pynamer.py:F401
    pynamer.py:F401
