# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=package_data
[metadata]
name = pynamer
version = attr: pynamer.__version__
author = Stephen R A King
author_email = sking.github@gmail.com
maintainer = Stephen R A King
maintainer_email = sking.github@gmail.com
description = Utility to find an available package name in the PyPI repository and register it
long_description = file: README.md
long_description_content_type = text/markdown
keywords = available-on-pypi,pip-search,packaging,naming,name-generation,names,pypi,packaging,naming-conventions,
platforms = Any
url = https://github.com/Stephen-RA-King/pynamer
download_url = https://github.com/Stephen-RA-King/pynamer/archive/refs/heads/main.zip
license = MIT
license_files = LICENSE
documentation = https://pynamer.readthedocs.io/en/latest/

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find:
project_urls =
include_package_data = True
python_requires = >=3.9
install_requires =
    bs4
    build
    colorama
    jinja2
    packaging
    python-dateutil
    pyyaml
    requests
    rich
    tqdm
    twine
    wheel

[options.packages.find]
where = src

[options.package_data]
pynamer =
    README.md
    project_name
    project_name/__init__.py
    setup.txt
    setup_base.txt


[options.entry_points]
console_scripts =
    pynamer = pynamer.pynamer:main


[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = numpy
max-complexity = 18
max-line-length = 88
select = B, B9, C, D, E, F, N, W
exclude = tests/*,.tox/*,.nox/*,docs/*,.git/*,.github/*
ignore =
    # pycodestyle - whitespace before ‘,’, ‘;’, or ‘:’ - to be compatible with black
    E203,
    # pycodestyle - line break before binary operator
    W503,
per-file-ignores =
    # flake8 - function is too complex
    pynamer.py:C901
    builder.py:C901
